update. Mobile soon to come

--- a/index.html
+++ b/index.html
@@ -4,102 +4,121 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Medkit</title>
+	<link rel="shortcut icon" href="images/svgs/Logo.svg" type="image/png">
 	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="preconnect" href="https://fonts.gstatic.com"> -->
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<!-- FontAwesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" /> -->
 	<!--  -->
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 	<div class="background">
-		<img src="images/svgs/background.svg" alt="">
+		<div class="backImg">
+			<img src="images/svgs/background2.svg" alt="">
+		</div>
 		<img src="images/svgs/glassCircle.svg" alt="">
 		<img src="images/svgs/glassCircle.svg" alt="">
 		<img src="images/svgs/glassCircle.svg" alt="">
 		<img src="images/svgs/glassCircle.svg" alt="">
 	</div>
+	<div class="rect"></div>
+	<div class="header">
+			<div class="leftside">
+				<div class="logo">
+					<img src="images/svgs/Logo.svg" alt="">
+				</div>
+				<div class="medkit">
+					<p>medkit</p>
+				</div>
+			</div>
+			<div class="rightside">
+				<div class="blog">
+					<a href="blog.html">MEDKIT BLOG</a>
+				</div>
+				<div class="access1">
+					<a href="download.html">DOWNLOAD</a>
+				</div>
+			</div>
+	</div>
 	<div class="container">
-		<div class="header">
-			<div class="logo">
-				<img src="images/svgs/Logo.svg" alt="">
-			</div>
-			<div class="medkit">
-				<p>medkit</p>
-			</div>
-			<div class="blog">
-				<p>medkit blog</p>
-			</div>
-			<div class="access1">
-				<p>access prototype</p>
-			</div>
-		</div>
 		<div class="lander">
 			<div class="girl">
-				<img src="images/girl.svg" alt="">
+				<img src="images/masked.png" alt="">
 			</div>
-			<div class="safety">
-				<h1>Your safety, controlled</h1>
-			</div>
-			<div class="medkit">
-				<h3>medkit allows you to stay safe and informed,
-					when and how you want</h3>
-			</div>
-			<div class="access2">
-				<p>access prototype</p>
-			</div>
-			<div class="read">
-				<h4>read about us</h4>
-			</div>
-			<div class="mags">
-				<img src="images/svgs/placeholder.svg" alt="">
-				<img src="images/svgs/placeholder.svg" alt="">
-				<img src="images/svgs/placeholder.svg" alt="">
-				<img src="images/svgs/placeholder.svg" alt="">
-				<img src="images/svgs/placeholder.svg" alt="">
+			<div class="text">
+					<div class="safety">
+						<p>Your safety, controlled</p>
+				</div>
+				<div class="medkit2">
+					<p>medkit allows you to stay safe and informed,
+					when and how you want</p>
+				</div>
+				<a href="download.html" class="downloadButton">
+					<div class="access2">
+						<p>DOWNLOAD</p>
+					</div>
+					<div class="arrow">
+						<img src="images/svgs/Arrow 1.svg" alt="">
+					</div>
+				</a>
+				<div class="read">
+					<p>read about us</p>
+				</div>
+				<div class="mags">
+					<img src="images/svgs/Wired.svg" alt="">
+					<img id="EF" src="images/svgs/Entrepeneur.svg" alt="">
+					<img src="images/svgs/Forbes.svg" alt="">
+					<img src="images/svgs/Fortune.svg" alt="">
+					<img src="images/svgs/Make.svg" alt="">
+				</div>
 			</div>
 		</div>
 		<div class="infoHub">
 			<div class="manage">
-				<h1>Manage your health Y O U R way</h1>
+				<p>Manage your health Y O U R way</p>
 			</div>
 			<div class="info">
-				<h3>Info Hub allows you to curate
+				<p>Info Hub allows you to curate
 					your information intake so you’re whelmed...
 					<br>
 					<br>
-					...and not overwhelmed </h3>
+					...and not overwhelmed </p>
 			</div>
 			<div class="hubImage">
-				<img src="images/svgs/placeholder.svg" alt="">
+				<img src="images/svgs/appWindow.png" alt="">
 			</div>
 			<div class="hearing">
-				<h2>Are you Hearing too much?</h2>
 			</div>
 			<div class="healthy">
-				<h1>INFORMATION IS HOW YOU STAY HEALTHY</h1>
+				<p>INFORMATION IS HOW YOU STAY HEALTHY</p>
 			</div>
 			<div class="blogPlug">
 				<div class="blogImg">
-					<img src="images/svgs/placeholder.svg" alt="">
+					<img src="images/usingSmartPhone.jpg" alt="">
 				</div>
-				<div class="internet">
-					<h3>The internet allows us to stay informed on 
+				<div class="blogText">
+					<div class="internet">
+						<p>The internet allows us to stay informed on 
 						just about anything, including our health 
 						the health of those around us
 						<br>
+						<br>
 						Medkit helps you customize your information intake so you can stay safe while also staying healthy
-						</h3>
-				</div>
-				<div class="more">
-					<p>Read more on the blog</p>
+						</p>
+					</div>
+					<div class="more">
+						<a href="blog.html">Read more on the blog</a>
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="healthSpot">
-			<div class="glass1"></div>
 			<div class="keep">
-				<h1>Keep your health organized and your sanity intact. Schedule COVID tests with simplicity through Health Spot</h1>
+				<p>Keep your health organized and your sanity intact. Schedule COVID tests with simplicity through Health Spot</p>
 			</div>
 			<div class="pres">
 				<div class="phones">
@@ -114,97 +133,126 @@
 					</div>
 				</div>
 				<li class="presList">
-					<ul>
+					<ul class="ul1">
 						<img src="images/svgs/subtract.svg" alt="">
-						<h2>Locate</h2>
-						<p>After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+						<div class="listText1">
+							<p class="lItem1">Locate</p>
+							<p class="lItem2">After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+						</div>
 					</ul>
-					<ul>
-						<img src="images/svgs/subtract.svg" alt="">
-						<h2>Locate</h2>
-						<p>After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+					<ul class="ul1">
+						<img src="images/svgs/2.svg" alt="">
+						<div class="listText1">
+							<p class="lItem1">Clinics</p>
+							<p class="lItem2">After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+						</div>
 					</ul>
-					<ul>
-						<img src="images/svgs/subtract.svg" alt="">
-						<h2>Locate</h2>
-						<p>After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+					<ul class="ul1">
+						<img src="images/svgs/3.svg" alt="">
+						<div class="listText1">
+							<p class="lItem1">Questionnaire</p>
+							<p class="lItem2">Answer some basic questions about exposure and symptoms. Data entered in Medkit is Opt in, and will only be shared with your consent!</p>
+						</div>
 					</ul>
-					<ul>
-						<img src="images/svgs/subtract.svg" alt="">
-						<h2>Locate</h2>
-						<p>After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+					<ul class="ul1">
+						<img src="images/svgs/4.svg" alt="">
+						<div class="listText1">
+							<p class="lItem1">Arrival</p>
+							<p class="lItem2">Medkit will send you reminders about upcoming appointmnents along with an address and locational information</p>
+						</div>
 					</ul>
-					<ul>
-						<img src="images/svgs/subtract.svg" alt="">
-						<h2>Locate</h2>
-						<p>After visting Health Spot, enter your address, and you’ll be shown the nearest clinics and testing sites</p>
+					<ul class="ul1">
+						<img src="images/svgs/5.svg" alt="">
+						<div class="listText1">
+							<p class="lItem1">Results</p>
+							<p class="lItem2">After the provided wait time, your results will appear in Medkit in real time alongside emails direct from you chosen clinic!</p>
+						</div>
 					</ul>
 				</li>
-				
 			</div>
-			<div class="access3">
-					<p>Accesss protoype</p>
-				</div>
+			<a href="download.html" class="access3">
+				<p>Accesss protoype</p>
+			</a>
+			<div class="glass1 border"></div>
 		</div>
 		<div class="community">
 			<div class="forming">
-				<h1>Forming Community</h1>
+				<p>Forming Community</p>
 			</div>
 			<div class="even">
 				<p>Even though we can’t all see each other in person, we can still gather</p>
 			</div>
 			<li class="activites">
-				<ul class="mental">
-					<img src="images/svgs/placeholder.svg" alt="">
-					<div class="top1">
-						<h2>Mental Health</h2>
+				<ul class="ul2">
+					<div class="mask">
+						<div class="content">
+							<img src="images/mental.jpeg" alt="">
+						</div>
 					</div>
-					<div class="bot1">
-						<p>Community gathers a myriad of support groups from AA to SASA all in one place so you can have people to talk when you need support! </p>
+					<div class="listText2">
+						<div class="top">
+							<p>Mental Health</p>
+						</div>
+						<div class="bot">
+							<p>Use the Community page to access acitivites and join group hosted by people around the world so that you can keep yourself social and active through group acvites like yoga, meditation & mindfulness sessions, and more! </p>
+						</div>
 					</div>
 				</ul>
-				<ul class="support">
-					<div class="top2">
-						<h2>Support</h2>
+				<ul class="ul2">
+					<div class="listText3">
+							<div class="top">
+							<p>Support</p>
+						</div>
+						<div class="bot fix">
+							<p>Community gathers a myriad of support groups from AA to SASA all in one place so you can have people to talk when you need support! </p>
+						</div>
 					</div>
-					<div class="bot2">
-						<p>Community gathers a myriad of support groups from AA to SASA all in one place so you can have people to talk when you need support! </p>
+					<div class="mask">
+						<div class="content">
+							<img src="images/support.jpg" alt="">
+						</div>
 					</div>
-					<img src="images/svgs/placeholder.svg" alt="">
 				</ul>
-				<ul class="locale">
-					<img src="images/svgs/placeholder.svg" alt="">
-					<div class="top3">
-						<h2>Locale</h2>
+				<ul class="ul2">
+					<div class="mask">
+						<div class="content">
+							<img src="images/social.png" alt="">
+						</div>
 					</div>
-					<div class="bot3">
-						<p>Based off of your location, if local events are being hosted virually, Medkit will gather them so you can have access to your irl community without endagering yourself or others!</p>
+					<div class="listText2">
+							<div class="top">
+							<p>Locale</p>
+						</div>
+						<div class="bot">
+							<p>Based off of your location, if local events are being hosted virually, Medkit will gather them so you can have access to your irl community without endagering yourself or others!</p>
+						</div>
 					</div>
+					
 				</ul>
 			</li>
 		</div>
-		<div class="founders">
+	</div>
+	<div class="founders">
 			<div class="meet">
-				<h1>Meet the Medkit Founders</h1>
+				<p>Meet the Medkit Founders</p>
 			</div>
-			<div class="fouderImgs">
-				<div class="vic">
-					<img src="images/svgs/placeholder.svg" alt="">
+			<div class="founderImgs">
+				<div class="founder sonia">
+					<img src="images/sonia.jpeg" alt="">
 				</div>
-				<div class="scott">
-					<img src="images/svgs/placeholder.svg" alt="">
+				<div class="founder scott">
+					<img src="images/scott.jpeg" alt="">
 				</div>
-				<div class="sonia">
-					<img src="images/svgs/placeholder.svg" alt="">
+				<div class="founder vic">
+					<img src="images/vic.jpeg" alt="">
 				</div>
-				<div class="jacob">
-					<img src="images/svgs/placeholder.svg" alt="">
+				<div class="founder jacob">
+					<img src="images/me.jpeg" alt="">
 				</div>
-				<div class="sara">
-					<img src="images/svgs/placeholder.svg" alt="">
+				<div class="founder sara">
+					<img src="images/sara.png" alt="">
 				</div>
 			</div>
-		</div>
 	</div>
 </body>
 <script src=""></script>
