--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			</div>
 			<div class="rightside">
 				<div class="blog">
-					<a href="blog.html">MEDKIT BLOG</a>
+					<a href="not-found.html">MEDKIT BLOG</a>
 				</div>
 				<div class="access1">
-					<a href="download.html">DOWNLOAD</a>
+					<a href="not-found.html">DOWNLOAD</a>
 				</div>
 			</div>
 	</div>
@@ -57,7 +57,7 @@
 					<p>medkit allows you to stay safe and informed,
 					when and how you want</p>
 				</div>
-				<a href="download.html" class="downloadButton">
+				<a href="not-found.html" class="downloadButton">
 					<div class="access2">
 						<p>DOWNLOAD</p>
 					</div>
@@ -111,7 +111,7 @@
 						</p>
 					</div>
 					<div class="more">
-						<a href="blog.html">Read more on the blog</a>
+						<a href="not-found.html">Read more on the blog</a>
 					</div>
 				</div>
 			</div>
@@ -170,7 +170,7 @@
 					</ul>
 				</li>
 			</div>
-			<a href="download.html" class="access3">
+			<a href="not-found.html" class="access3">
 				<p>Accesss protoype</p>
 			</a>
 			<div class="glass1 border"></div>
