--- a/test.html
+++ b/test.html
@@ -2,23 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Medkit</title>
 	<link rel="shortcut icon" href="images/svgs/Logo.svg" type="image/png">
-	<!-- Bootstrap CSS
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<link rel="preconnect" href="https://fonts.gstatic.com"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	<!-- FontAwesome
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" /> -->
-	<!--  -->
-	<link rel="stylesheet" href="index.css">
+	<!-- <link rel="stylesheet" href="index.css"> -->
+	<link rel="stylesheet" href="test.css">
 </head>
 <body>
 	<div class="background">
 		<div class="backImg">
 			<img src="images/svgs/background2.svg" alt="">
+		</div>
+		<div class="backImg2">
+			<img src="images/svgs/backPhone.svg" alt="">
 		</div>
 		<img  id="c1" src="images/svgs/glassCircle.svg" alt="">
 		<img class="selector2" lax_preset_blurInOut:213:39 id="c2" src="images/svgs/glassCircle.svg" alt="">
@@ -255,7 +253,7 @@
 			</div>
 	</div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
 
 <script>
 	window.onload = function () {
@@ -271,5 +269,5 @@
 		]}
 	})
 	}
-</script>
+</script> -->
 </html>
