final push hopefully

--- a/test.html
+++ b/test.html
@@ -236,18 +236,46 @@
 			<div class="founderImgs">
 				<div class="founder sonia">
 					<img src="images/sonia.jpeg" alt="">
+					<p class="title">Sonia Lee</p>
+					<p class="descrip">Lead UX Designer
+					<br>
+					Sonia Lee is a UX Designer for Park Systems and their partner publication, NanoScientific.
+					</p>
 				</div>
 				<div class="founder scott">
 					<img src="images/scott.jpeg" alt="">
+					<p class="title">Scott Stewart</p>
+					<p class="descrip">
+						Lead Product Manager
+						<br>
+						Scott Stewart is a project manager, who most recently made the jump from high-end hospitality.
+					</p>
 				</div>
 				<div class="founder vic">
 					<img src="images/vic.jpeg" alt="">
+					<p class="title">Victoria Paniagua</p>
+					<p class="descrip">
+						Head of Product Design
+						<br>
+						Victoria is currently a product designer at Digit. She was previously running internal operations at Quip.
+					</p>
 				</div>
 				<div class="founder jacob">
 					<img src="images/me.jpeg" alt="">
+					<p class="title">Jacob Carter</p>
+					<p class="descrip">								Head of Product 		Developement
+						<br>
+						Jacob Carter is a product photgrapher and promo videographer tranisitioning into product design and front end developement.
+					</p>
 				</div>
 				<div class="founder sara">
 					<img src="images/sara.png" alt="">
+					<p class="title">Sara Walker</p>
+					<p class="descrip">
+						Head of R&D
+						<br>
+						Currently a Product Leader at Adobe. Previously, she held marketing and product roles at Adobe, Etsy and Motorola.
+					</p>
 				</div>
 			</div>
 		</div>
